<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">
    <item
        android:id="@+id/nav_home"
        android:icon="@drawable/ic_lucide_home"
        android:title="@string/nav_home" />
    <item
        android:id="@+id/nav_vault"
        android:icon="@drawable/ic_lucide_folder"
        android:title="@string/nav_vault" />
    <item
        android:id="@+id/nav_search"
        android:icon="@drawable/ic_lucide_search"
        android:title="Search" />
    <item
        android:id="@+id/nav_transfers"
        android:icon="@drawable/ic_lucide_activity"
        android:title="Log" />
    <item
        android:id="@+id/nav_settings"
        android:icon="@drawable/ic_lucide_settings"
        android:title="@string/nav_settings" />
</menu>
